# pedeps

./: CMakeLists.txt
src/: copypedeps.cpp
